--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,21 @@ body{
     background: green;
 }
 
+.button{
+    border-radius: 10px;
+    border: 5px solid yellowgreen;
+    margin-inline: 30px;
+    font-family:'Lucida Sans Regular';
+    color: blue;
+}
+input{
+    border: 5px solid yellowgreen;
+    border-radius: 10px;
+    margin-inline: 30px;
+    font-family:'Lucida Sans Regular';
+    color: blue;
+}
+
 .card{
     width: 250px;
     height: 400px;
@@ -11,7 +26,8 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    margin: auto;
+    margin-top: 80px;
+    margin-bottom: 50px;
     border: 3px solid black;
     border-radius: 10px;
 }
@@ -26,10 +42,12 @@ body{
 
 .palo-arriba{
     font-size: 80px;
-    margin: 0px 150px 100px 5px;
+    margin: 0px 150px 150px 5px;
 }
 
 .palo-abajo{
     font-size: 80px;
-    margin: 0px 5px 100px 150px;
+    margin: 50px 5px 0px 150px;
+    transform: rotate(180deg);
+    display: inline-block;
 }
